--- a/ponder/meta-css.html
+++ b/ponder/meta-css.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meta Tags</title>
     <link rel="stylesheet" href="meta-css.css">
+    <script defer src="variables-constants.js" ></script>
+
 </head>
 <body>
     
