--- a/missionstatement/missionstatement.html
+++ b/missionstatement/missionstatement.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission Statement</title>
-    <link rel="stylesheet" href="missionstatmnt.css">
+    <link rel="stylesheet" href="missionstatment.css">
 </head>
 <body>
+<header>
     <h1>Mission Statement</h1>
-    <p>Brigham Young University-Idaho</p>
+    <h2><u>Brigham Young University-Idaho</u></h2>
+    
+    <hr>
+    </header>
+    <main>
+    <p>Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.</p>
 
-<p>Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.
-</p>
-<p>
-<i>The university does this by:</i>
-</p>
-<p>
-<ol>
-    <li>Building testimonies of the restored gospel of Jesus Christ and fostering its principles in a wholesome academic, cultural, and social environment.</li>
-    <li>Providing a high-quality education that prepares students of diverse interests and abilities for lifelong learning and employment.</li>
-    <li>Serving as many students as possible within resource constraints.</li>
-    <li>Delivering education that is affordable for students and the Church.</li>
-</ol>
-</p>  
-<img src="byui-logo-blue.webp" alt="byui-logo-blue">              
+        <p><i>The university does this by:</i></p>
+        <ol>
+            <li>Building testimonies of the restored gospel of Jesus Christ and fostering its principles in a wholesome academic, cultural, and social environment.</li>
+            <li>Providing a quality education that prepares students of diverse interests and abilities for lifelong learning and employment.</li>
+            <li>Serving as many students as possible within resource constraints.</li>
+            <li>Delivering education that is affordable for students and the Church.</li>
+        </ol>
+    </main>
+    <footer>
+       <img src="byui-logo-blue.webp" alt="byui-logo">
+    </footer>
+    </div>
 </body>
 </html>
