--- a/missionstatement/missionstatement.html
+++ b/missionstatement/missionstatement.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission Statement</title>
     <link rel="stylesheet" href="missionstatment.css">
-    
+    <script defer src="missionstatement.js" ></script>
+
 </head>
 <body>
     
